# uniclare-client

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  app.py  compose.dev.yaml  compose.yaml  docker-compose.yaml  launcher.py  macos.spec  readme.md  render.yaml  requirements-dev.txt  requirements.txt  winx64.spec
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/assets/: icon.icns
.github/msix/: AppxManifest.xml
.github/scripts/: update_readme_version.py
.github/workflows/: build.yml  client-build-and-test.yml  docker-build-and-test.yml  image-build.yml  (+1 more)
.mcp/: server.json
api/: auth.py  profile.py  system.py
app/: main.py
app/api/: system.py  (+2 more)
backend/: .env.example  .gitignore  Dockerfile  Makefile  app.py  desktop.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: config.py  constants.py  http.py  urls.py  utils.py
backend/app/routes/: auth.py  notifications.py  profile.py  result.py  system.py  user.py
backend/app/schemas/: auth.py  notification.py  result.py  user.py
backend/app/services/: auth.py  notifications.py  result.py  user.py
core/: cache.py  logging.py  utils.py
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
requirements/: base.txt  dev.txt
schema/: pydantic_auth.py  pydantic_notification.py  pydantic_profile.py  pydantic_system.py  pydantic_timetable.py
services/: auth.py  profile.py  result.py  time_table.py
specs/: linux_x86_64.spec  mac_arm64.spec  macos.spec  win_x64.spec
(+83 files in other folders)
