[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.137.1",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
desktop = [
    "pygobject>=3.56.3 ; sys_platform == 'linux'",
    "pywebview>=6.2.1",
]
