[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.1",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.2",
    "uvicorn>=0.49.0",
]

[project.optional-dependencies]
desktop = [
    "pyqt6>=6.11.0",
    "pyqt6-webengine>=6.11.0",
    "pywebview>=6.2.1",
    "qtpy>=2.4.3",
]

[dependency-groups]
dev = [
    "nuitka>=4.1.3",
]
